fix card wrapping and width problem

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,4 +1,5 @@
 .user-item-wrapper {
+	width: 100%;
 	height: 20vh;
 	position: relative;
 	background-color: #111;
